deployment/config-service-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.20.0 (f3d54d784)
  creationTimestamp: null
  labels:
    io.kompose.service: config-service
  name: config-service
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.20.0 (f3d54d784)
      creationTimestamp: null
      labels:
        io.kompose.network/backend: "true"
        io.kompose.service: config-service
    spec:
      containers:
      - image: gcr.io/crypto-airlock-265015/jubilee_config-service
        name: config-service
        ports:
        - containerPort: 8888
        resources: {}
        volumeMounts:
        - mountPath: /app/configs
          name: config-service-claim0
      restartPolicy: Always
      volumes:
      - name: config-service-claim0
        persistentVolumeClaim:
          claimName: config-service-claim0
status: {}
