deployment/timeline-service-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.20.0 (f3d54d784)
  creationTimestamp: null
  labels:
    io.kompose.service: timeline-service
  name: timeline-service
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.20.0 (f3d54d784)
      creationTimestamp: null
      labels:
        io.kompose.network/backend: "true"
        io.kompose.network/timelinedb: "true"
        io.kompose.service: timeline-service
    spec:
      containers:
      - image: gcr.io/crypto-airlock-265015/jubilee_timeline-service
        name: timeline-service
        ports:
        - containerPort: 8666
        resources: {}
      restartPolicy: Always
status: {}
