deployment/dummy-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.20.0 (f3d54d784)
  creationTimestamp: null
  labels:
    io.kompose.service: dummy-service
  name: dummy-service
spec:
  ports:
  - name: "5555"
    port: 5555
    targetPort: 5555
  selector:
    io.kompose.service: dummy-service
status:
  loadBalancer: {}
