deployment/eureka-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.20.0 (f3d54d784)
  creationTimestamp: null
  labels:
    io.kompose.service: eureka-service
  name: eureka-service
spec:
  ports:
  - name: "8761"
    port: 8761
    targetPort: 8761
  selector:
    io.kompose.service: eureka-service
status:
  loadBalancer: {}
