deployment/gateway-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.20.0 (f3d54d784)
  creationTimestamp: null
  labels:
    io.kompose.service: gateway-service
  name: gateway-service
spec:
  ports:
  - name: "8050"
    port: 8050
    targetPort: 8050
  selector:
    io.kompose.service: gateway-service
status:
  loadBalancer: {}
