deployment/authdb-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: authdb
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/authdb: "true"
  podSelector:
    matchLabels:
      io.kompose.network/authdb: "true"
